hphp/hack/test/typecheck/modules/module_first2.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>

module foo;
module bar;
